can't select the same material in multi edit mode #61531

Closed
opened 2019-02-14 11:22:51 +01:00 by иван платонов · 10 comments

cantSelectSameMaterialinMultiEditMode.blend
System Information
Operating system: windows 10
Graphics card: nvidia geforce gtx 960

Blender Version
Broken:
2.80, c6cbcf83d0, blender2.8, 2019-2-14

can't select the same material in multi edit mode

  1. create a pair of objects
  2. append different materials to different faces
  3. next in multi-edit mode try to choose 1 material, blender will select wrong faces
[cantSelectSameMaterialinMultiEditMode.blend](https://archive.blender.org/developer/F6607973/cantSelectSameMaterialinMultiEditMode.blend) **System Information** Operating system: windows 10 Graphics card: nvidia geforce gtx 960 **Blender Version** Broken: 2.80, c6cbcf83d015, blender2.8, 2019-2-14 can't select the same material in multi edit mode 1. create a pair of objects 2. append different materials to different faces 3. next in multi-edit mode try to choose 1 material, blender will select wrong faces

Added subscriber: @ivan-platonov

Added subscriber: @ivan-platonov
Campbell Barton was assigned by Sebastian Parborg 2019-02-14 11:40:13 +01:00
Member

Added subscriber: @zazizizou

Added subscriber: @zazizizou

Added subscriber: @Vyach

Added subscriber: @Vyach

I mined more
2.80 (sub 45), 893fa59831, 2019-02-24 22:02

How to reproduce:

Here is video. And small difference in order of actions determines bug appearance.
At first sphere I made spot selection before I add material slots, and on the second I add material slots at first.

No matter if all sphere was selected or unselected. It causes bug.
And only the way: «Select spot->Add material slot->Assign» (repeat for each spot) work well.

2019-02-27_02-39-43.mp4

nomatselrepro.blend

I mined more 2.80 (sub 45), 893fa598319e, 2019-02-24 22:02 How to reproduce: Here is video. And small difference in order of actions determines bug appearance. At first sphere I made spot selection before I add material slots, and on the second I add material slots at first. No matter if all sphere was selected or unselected. It causes bug. And only the way: «Select spot->Add material slot->Assign» (repeat for each spot) work well. [2019-02-27_02-39-43.mp4](https://archive.blender.org/developer/F6719768/2019-02-27_02-39-43.mp4) [nomatselrepro.blend](https://archive.blender.org/developer/F6719775/nomatselrepro.blend)
Member

Thanks for reporting. The issue is that assigning and selecting is based on the index of the active material in the UI. I'm working on a fix.

Thanks for reporting. The issue is that assigning and selecting is based on the index of the active material in the UI. I'm working on a fix.

Thank you!

Thank you!

Removed subscriber: @Vyach

Removed subscriber: @Vyach
Member

Just submitted a patch: D4441.

Assigning materials is not working as intended though. I'll try to fix it in a different patch.

Just submitted a patch: [D4441](https://archive.blender.org/developer/D4441). Assigning materials is not working as intended though. I'll try to fix it in a different patch.

This issue was referenced by 6b39dc7672

This issue was referenced by 6b39dc7672eb463618efb5538f91961365db5797

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61531
No description provided.