Fix T61531: can't select same material in multi edit mode

D4441 by @zazizizou w/ edits.